# naoqi_bridge_msgs

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
msg/: AgeProperties.msg  Arms.msg  ChainClosestObstaclePosition.msg  ChainVelocityClipped.msg  Chains.msg  ChestButtonPressed.msg  ColorName.msg  EngagementZoneOfPerson.msg  EventStamped.msg  ExpressionProperties.msg  ExternalCollisionProtectionNameList.msg  ExternalCollisionProtectionNames.msg  EyePoints.msg  FaceCharacteristics.msg  FaceDetected.msg  FaceDetectionExtraInfo.msg  FaceDetectionShapeInfo.msg  FaceInfo.msg  FaceROI.msg  FacialPartsProperties.msg  Frames.msg  GazeAnalysis.msg  GenderProperties.msg  HandTouch.msg  JointAnglesWithSpeed.msg  LandMark.msg  MouthPoints.msg  MoveConfig.msg  MoveConfigNames.msg  MoveFailed.msg  MovementInfo.msg  NosePoints.msg  PeopleDetected.msg  PeoplePerception.msg  PhotoCaptureResolutionTypes.msg  PictureFormatNames.msg  PoseStampedWithSpeed.msg  ProportionMovingPixels.msg  RealSizeRoi.msg  SmileProperties.msg  (+2 more)
srv/: ALTrackerGetMoveConfig.srv  ALTrackerGetRobotPosition.srv  ActivateAllRules.srv  ActivateRule.srv  AddContext.srv  AddWordListToSlot.srv  AnalyzeFaceCharacteristics.srv  ClearDatabase.srv  CompileBNFToLCF.srv  ComputeEngagementZoneBasedOn3DCoordinates.srv  ComputeEngagementZoneBasedOnAngularCoordinates.srv  ComputeEngagementZoneBy3DCoordinates.srv  ComputeEngagementZoneByAngularAndDistance.srv  ConfigureWifi.srv  DeactivateAllRules.srv  DeactivateRule.srv  EraseContextSet.srv  FadeLeds.srv  FadeRGBWithColorName.srv  ForgetPerson.srv  GetActiveTarget.srv  GetAlifeState.srv  GetArmsEnabled.srv  GetAudioExpression.srv  GetAvailableLanguages.srv  GetAvailableModes.srv  GetChainClosestObstaclePosition.srv  GetEffector.srv  GetExternalCollisionProtectionEnabled.srv  (+111 more)
